update in list task

--- a/src/components/Detail.css
+++ b/src/components/Detail.css
@@ -11,16 +11,117 @@
     background-color: #fff;
     /* background-color: rgba(0, 0, 0, 0.701); */
     height: 50px;
-    width: 420px;
+    width: 460px;
+    border-radius: 5px;
+    margin: 5px;
 }
 .List-input input{
-    padding: 15px 182px 15px 15px;
+    padding: 15px 200px 15px 15px;
     border: none;
     font-size: 16px;
 }
 .boxex{
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
 
+}
+.detail-form{
+    background-color: #fff;
+    height: 200px;
+    width: 420px;
+    margin: 5px;
+}
+.divide{
+    display: flex;
+
+}
+.note{
+    width: 180px;
+    height: 180px;
+    border: 1px solid;
+    padding: 5px;
+    /* margin: 4px 0px */
+}
+.options {
+    width: 240px;
+    /* height: 172px; */
+    margin-left: 10px;
+    position: relative;
+}
+.date{
+    width: 240px;
+    /* height: 172px; */
+    margin-left: 10px;
+   
+}
+.options select{
+    padding: 5px 110px 5px 5px;
+}
+.options button {
+    position: absolute;
+    top: 105px;
+    right: -10px;
+    background-color: red;
+    color: #fff;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border: 1px solid;
+}
+.date button{
+    padding: 5px 10px;
+}
+
+
+
+
+
+
+
+
+
+
+Sample input,
+.Sample button {
+  font: inherit;
+}
+
+.Sample header {
+  background-color: #323639;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  color: white;
+}
+
+.Sample header h1 {
+  font-size: inherit;
+  margin: 0;
+}
+
+.Sample__container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  margin: 10px 0;
+  padding: 10px;
+}
+
+.Sample__container > * > * {
+  margin: 10px;
+}
+
+.Sample__container__content {
+  display: flex;
+  max-width: 100%;
+  flex-basis: 420px;
+  flex-direction: column;
+  flex-grow: 100;
+  align-items: stretch;
+  padding-top: 1em;
+}
+
+.Sample__container__content .react-calendar {
+  margin: 0 auto;
 }
