--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -56,6 +56,10 @@
 .box-list h3 {
     /* margin-left: 55px; */
     text-align: center;
+    
+}
+.box-list {
+    position: relative;
 }
 
 .box-task {
@@ -66,4 +70,27 @@
     height: 150px;
     width: 150px;
     background-color: #fff;
+    
+}
+.icons{
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    /* z-index: 9; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 125px;
+}
+.icons input{
+    height: 20px;
+    width: 20px;
+}
+
+.icons button{
+    border: none;
+    color: rgb(0, 47, 255);
+}
+.icons button .MuiSvgIcon-root{
+    font-size: 30px;
 }
